--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.4.9"
+  },
+  "scripts": {
+    "taiwind": "npx tailwindcss -i public/styles/core.css -o public/styles/main.css --watch"
   }
 }
